[gd_scene load_steps=7 format=3 uid="uid://b07ryt2f242tb"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_gf4dy"]
[ext_resource type="Script" path="res://Player/CameraHolder.gd" id="2_d0asu"]
[ext_resource type="Texture2D" uid="uid://c1j2pbxneo0gk" path="res://Weapons/Derringer/Derringer.png" id="3_aed4v"]
[ext_resource type="Script" path="res://Player/WeponHolder.gd" id="4_jhviu"]
[ext_resource type="PackedScene" uid="uid://dbcjtfem1fgmc" path="res://PauseScreen/pause_screen.tscn" id="4_xwqvr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_62k8p"]
radius = 1.16538
height = 6.50292

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_gf4dy")

[node name="player_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.27012, 0)
shape = SubResource("CapsuleShape3D_62k8p")

[node name="CameraHolder" type="Node3D" parent="." groups=["Cam"]]
transform = Transform3D(1, 0, 0, 0, 0.998021, -0.0628775, 0, 0.0628776, 0.998021, 0, 6.02, 0)
script = ExtResource("2_d0asu")

[node name="Camera3D" type="Camera3D" parent="CameraHolder"]

[node name="PlayerUI" type="Control" parent="CameraHolder/Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Health" type="Label" parent="CameraHolder/Camera3D/PlayerUI"]
layout_mode = 0
offset_left = 19.0
offset_top = 600.0
offset_right = 71.0
offset_bottom = 626.0
text = "Health"

[node name="Ammo" type="Label" parent="CameraHolder/Camera3D/PlayerUI"]
layout_mode = 0
offset_left = 1057.0
offset_top = 580.0
offset_right = 1108.0
offset_bottom = 606.0
text = "Ammo"

[node name="Current_Weapon" type="TextureRect" parent="CameraHolder/Camera3D/PlayerUI"]
layout_mode = 0
offset_left = 824.0
offset_top = 544.0
offset_right = 1024.0
offset_bottom = 594.0
texture = ExtResource("3_aed4v")
stretch_mode = 2

[node name="inventoryAmmo" type="Label" parent="CameraHolder/Camera3D/PlayerUI"]
layout_mode = 0
offset_left = 1055.0
offset_top = 531.0
offset_right = 1130.0
offset_bottom = 557.0
text = "Inventory"

[node name="GunName" type="Label" parent="CameraHolder/Camera3D/PlayerUI"]
layout_mode = 0
offset_left = 812.0
offset_top = 526.0
offset_right = 896.0
offset_bottom = 552.0
text = "22 PopGun"

[node name="TimerLabel" type="Label" parent="CameraHolder/Camera3D/PlayerUI"]
layout_mode = 0
offset_left = 1042.0
offset_top = 462.0
offset_right = 1082.0
offset_bottom = 485.0

[node name="Pionts" type="Label" parent="CameraHolder/Camera3D/PlayerUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="BossHealth" type="ProgressBar" parent="CameraHolder/Camera3D/PlayerUI"]
visible = false
layout_mode = 0
offset_left = 14.0
offset_top = 12.0
offset_right = 1138.0
offset_bottom = 39.0
max_value = 5000.0
step = 1.0
value = 5000.0

[node name="PauseScreen" parent="CameraHolder/Camera3D/PlayerUI" instance=ExtResource("4_xwqvr")]
visible = false
layout_mode = 1

[node name="Flashlight" type="SpotLight3D" parent="CameraHolder/Camera3D"]
transform = Transform3D(0.99991, 0.00922814, -0.009734, -0.00883555, 0.999175, 0.039632, 0.0100917, -0.0395424, 0.999167, -0.0196579, 0.0544555, -0.695883)
light_energy = 16.0
spot_range = 15.247
spot_angle = 35.2975

[node name="WeponHolder" type="Node3D" parent="CameraHolder"]
transform = Transform3D(0.997354, 0.011103, 0.0718457, -0.0139662, 0.999123, 0.0394723, -0.0713444, -0.0403714, 0.996635, 0.99425, 0.978437, -1.11819)
script = ExtResource("4_jhviu")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.38573, -3.67217)
omni_range = 16.9723

[node name="PlayerAudio" type="AudioStreamPlayer" parent="."]
volume_db = -17.627
